Add docs on likes and donates.
