# internal/donates/delivery/donates_handler.go
@@ -24,6 +24,20 @@ func New(d domain.DonatesUseCase, u domain.UsersUseCase) *Handler {
 	}
 }
 
+// CreateDonate godoc
+// @Summary     Create donate
+// @Description Send donate to author
+// @ID          create_donate
+// @Tags        posts
+// @Param       post body models.DonateMpfd true "Donate Fields"
+// @Produce     json
+// @Success     200 {object} models.Donate  "Donate was successfully created"
+// @Failure     400 {object} echo.HTTPError "Bad request"
+// @Failure     401 {object} echo.HTTPError "No session provided"
+// @Failure     404 {object} echo.HTTPError "Post not found"
+// @Failure     500 {object} echo.HTTPError "Internal error"
+// @Security    ApiKeyAuth
+// @Router      /donate [post]
 func (h *Handler) CreateDonate(c echo.Context) error {
 	cookie, err := httpAuth.GetCookie(c)
 	if err != nil {
@@ -47,6 +61,19 @@ func (h *Handler) CreateDonate(c echo.Context) error {
 	return c.JSON(http.StatusOK, donate)
 }
 
+// GetDonate    godoc
+// @Summary     Get donate
+// @Description Get donate by id
+// @ID          get_donate
+// @Tags        posts
+// @Param       donate path integer true "Post ID"
+// @Produce     json
+// @Success     200 {object} models.Donate  "Donate was successfully create"
+// @Failure     400 {object} echo.HTTPError "Bad request"
+// @Failure     401 {object} echo.HTTPError "No session provided"
+// @Failure     500 {object} echo.HTTPError "Internal error"
+// @Security    ApiKeyAuth
+// @Router      /donate/{id} [get]
 func (h *Handler) GetDonate(c echo.Context) error {
 	id, err := strconv.ParseUint(c.Param("id"), 10, 64)
 	if err != nil {
@@ -61,6 +88,18 @@ func (h *Handler) GetDonate(c echo.Context) error {
 	return c.JSON(http.StatusOK, donate)
 }
 
+// GetDonates   godoc
+// @Summary     Get donates
+// @Description Get donates of user
+// @ID          get_donates
+// @Tags        posts
+// @Produce     json
+// @Success     200 {object} []models.Donate "Donates were successfully recieved"
+// @Failure     400 {object} echo.HTTPError  "Bad request"
+// @Failure     401 {object} echo.HTTPError  "No session provided"
+// @Failure     500 {object} echo.HTTPError  "Internal error"
+// @Security    ApiKeyAuth
+// @Router      /donates [get]
 func (h *Handler) GetDonates(c echo.Context) error {
 	cookie, err := httpAuth.GetCookie(c)
 	if err != nil {
