# internal/models/posts.go
@@ -6,11 +6,13 @@ type Post struct {
 	Img    string `json:"img" form:"img" db:"img" validate:"required" example:"path/to/image.jpeg"`
 	Title  string `json:"title" form:"title" db:"title" validate:"required" example:"some title"`
 	Text   string `json:"text" form:"text" db:"text" validate:"required" example:"some text"`
+
+	LikesNum uint64 `json:"likesNum" validate:"required" example:"5"`
 }
 
 type Like struct {
-	UserID uint64 `json:"userID" db:"user_id"`
-	PostID uint64 `json:"postID" db:"post_id"`
+	UserID uint64 `json:"userID" db:"user_id" validate:"required" example:"100"`
+	PostID uint64 `json:"postID" db:"post_id" validate:"required" example:"222"`
 }
 
 func (p Post) GetID() uint64 {
